--- a/src/components/App.css
+++ b/src/components/App.css
@@ -53,7 +53,7 @@ body {
   outline: none;
   border-style: none;
   font-family: "Montserrat", sans-serif;
-  background-color: #ebebeb;
+  background-color: #f0f0f0;
 }
 
 .inputs .textField button {
@@ -69,6 +69,7 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  margin-bottom: 30px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -83,6 +84,14 @@ body {
   margin-bottom: 20px;
   font-family: "Montserrat", sans-serif;
   background-color: #e4e4e4;
+}
+
+.inputs h4 {
+  padding: 10px;
+  color: #525252;
+  margin: 0 0 20px 0;
+  font-family: "Montserrat", sans-serif;
+  background-color: #f0f0f0;
 }
 
 .totals {
