--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -2,7 +2,7 @@ $mainFont: "Montserrat", sans-serif;
 $grey1: rgb(82, 82, 82);
 $grey2: rgb(104, 104, 104);
 $grey3: rgb(228, 228, 228);
-$grey4: rgb(235, 235, 235);
+$grey4: rgb(240, 240, 240);
 $light: rgb(250, 250, 250);
 
 body {
@@ -58,6 +58,7 @@ body {
 
   .startStopBtn {
     display: flex;
+    margin-bottom: 30px;
     flex-direction: column;
 
     button {
@@ -69,6 +70,14 @@ body {
       font-family: $mainFont;
       background-color: $grey3;
     }
+  }
+
+  h4 {
+    padding: 10px;
+    color: $grey1;
+    margin: 0 0 20px 0;
+    font-family: $mainFont;
+    background-color: $grey4;
   }
 }
 
