--- a/src/components/App.css
+++ b/src/components/App.css
@@ -14,7 +14,7 @@ body {
 }
 
 .container {
-  margin: auto;
+  margin: 2vh auto;
   padding: 20px;
   display: -webkit-box;
   display: -ms-flexbox;
