--- a/src/components/App.css
+++ b/src/components/App.css
@@ -23,7 +23,7 @@ body {
   display: -ms-flexbox;
   display: flex;
   min-height: 96vh;
-  margin: 2vh auto;
+  margin: 0 auto;
   min-width: 320px;
   overflow: hidden;
   max-width: 1024px;
@@ -34,13 +34,12 @@ body {
           flex-direction: column;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  background-color: #686868;
 }
 
 .container h1 {
   color: #fafafa;
   text-align: center;
-  margin: 10px auto 30px auto;
+  margin: 0 auto 20px auto;
 }
 
 .dollarSign {
@@ -218,11 +217,10 @@ body {
 }
 
 .mainMoneyTimerContainer .mainMoneyTimerDisplay {
-  width: 100%;
   text-align: center;
+  margin: 40px 0 25px 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  margin: 40px auto 25px auto;
 }
 
 @media (min-width: 360px) {
